--- a/documentation/README.html
+++ b/documentation/README.html
@@ -1,162 +1,248 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <html>
-
 <head>
+<title>Spark Readme</title>
+<style type="text/css">
+/* global font and body settings */
+body {
+	font-size : 100%;
+	background-color : #d3d6d9;
+	padding: 0px;
+	margin: 0px 0px 30px 0px;
+}
+body, td, th {
+	font-family : arial, helvetica, sans-serif;
+	font-size : 10pt;
+}
+pre, tt, code {
+	font-family : courier new, monospaced;
+	font-size : 9pt;
+}
+#pageContainer {
+	display: block;
+	position: relative;
+	clear: both;
+	background-color: #fff;
+	border: 1px solid #999;
+	padding: 40px;
+	margin: 30px;
+	-moz-border-radius: 6px;
+}
+#pageHeader {
+	display: block;
+	position: relative;
+	height: 80px;
+	background-color: #e7eaee;
+	border: 1px solid #cccccc;
+	border-bottom: none;
+	-moz-border-radius: 5px 5px 0px 0px;
+	margin: 10px 0px 0px 0px;
+}
+#pageBody {
+	margin: 0px 18px 0px 20px;
+}
 
-  <title>Jive Spark README</title>
 
-  <style type="text/css">
 
-        BODY {
+/* anchors */
+a:link {
+	color: #11568c;
+}
+a:visited {
+	color: #571c8d;
+}
+a:hover {
+	color: #7a1d42;
+	text-decoration : underline;
+}
+a:active {
+	color: #7a1d42;
+}
 
-            font-size : 100%;
 
-        }
 
-        BODY, TD, TH {
+/* page header elements (logo and navigation) */
+.navigation {
+	display: block;
+	position: relative;
+	height: 20px;
+	background-color: #335588;
+	border: 1px solid #cccccc;
+	border-top: none;
+	color: #ffffff;
+	font-size: 11px;
+	line-height: 18px;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 25px 0px;
+	overflow: hidden;
+}
+.navigation a {
+	margin: 0px 20px 0px 20px;
+}
+.navigation a:link { color: #ffffff; }
+.navigation a:visited { color: #ffffff; }
+.navigation a:hover { color: #ffffff; }
+.navigation a:active { color: #ffffff; }
 
-            font-family : tahoma, verdana, arial, helvetica, sans-serif;
 
-            font-size : 0.8em;
 
-        }
+/* headings */
+h1 {
+	display: block;
+	position: relative;
+	font-size : 1.7em;
+	font-weight : bold;
+	color: #670e15;
+	padding: 0px;
+	margin: 30px 0px 0px 20px;
+}
+h2 {
+	font-size : 1.3em;
+	font-weight : bold;
+	margin: 40px 0px 6px 0px;
+	padding: 0px;
+	color: #335588;
+}
+h3 {
+	font-size : 1.0em;
+	font-weight : bold;
+	margin: 25px 0px 3px 0px;
+	padding: 0px;
+	color: #334466;
+}
 
-        A:hover {
 
-            text-decoration : none;
 
-        }
+/* general elements */
+p {
+	margin: 0px 0px 15px 0px;
+}
 
-        .pageheader {
+ul {
+	margin: 5px 0px 15px 35px;
+}
+li {
+	padding-bottom : 4px;
+}
+tt {
+	font-family : courier new;
+	font-weight : bold;
+	color : #060;
+}
+hr {
+	display: block;
+	height: 1px;
+	background-color: #999999;
+	border: none;
+	margin: 40px 0px 20px 0px;
+}
 
-            font-family : arial, helvetica, sans-serif;
-
-            font-size : 14pt;
-
-            font-weight: bold;
-
-        }
-
-        H1 {
-
-            font-family : tahoma, arial, helvetica, sans-serif;
-
-            font-size : 1.4em;
-
-            font-weight: bold;
-
-            border-bottom : 1px #ccc solid;
-
-            padding-bottom : 2px;
-
-						display : inline;
-
-						padding-left : 5px;
-
-        }
-
-        H2 {
-
-            font-weight: bold;
-
-            font-family : arial, helvetica, sans-serif;
-
-            font-size : 1.1em;
-
-        }
-
-        TT {
-
-            font-family : courier new;
-
-            font-weight : bold;
-
-            color : #060;
-
-        }
-
-        PRE {
-
-            font-family : courier new;
-
-            font-size : 100%;
-
-        }
-
-        .footer {
-
-            font-size : 0.8em;
-
-            color : #666;
-
-            text-align : center;
-
-        }
-
-    </style>
-
+.footer {
+	font-size : 8pt;
+	color : #666;
+	text-align : center;
+	margin-top : 2em;
+	padding-top : 0.5em;
+	border-top : 1px #CCC solid;
+}
+</style>
 </head>
-
 <body>
 
+<div id="pageContainer">
 
+	<div id="pageHeader">
+		<h1>Spark Readme</h1>
+	</div>
+	<div class="navigation">
+	<a href="README.html"><strong>Readme</strong></a>|<a href="changelog.html">Changelog</a>|<a href="LICENSE.html">License</a>
+	</div>
 
-<table border=0><tr>
-
-<!--<td><img src="documentation/images/spark_logo.gif" width="59" height="40" alt="JC Logo"></td>-->
-
-<td><h1>Jive Spark README</h1></td>
-
-</tr></table>
-
+	<div id="pageBody">
 
 
 <p>
-
 <table boder=0>
-
 <tr>
-
-	<td>version:</td>
-
-	<td><b>2.0 Beta</b></td>
-
+	<td align="right">version:</td>
+	<td><b>@version@</b></td>
 </tr><tr>
-
-	<td>released:</td>
-
-	<td><b>June 20, 2006</b></td>
-
+	<td align="right">released:</td>
+	<td><b>@builddate@</b></td>
 </tr>
-
 </table>
 
+<br>
 
-<p>Thank you for choosing Spark!</p>
+<p>
+Thank you for choosing Spark!
+<p>
+Spark is a full-features instant messaging (IM) and groupchat client that uses the
+XMPP protocol.
+<p>
+Further information can be found on the <a href="http://www.jivesoftware.org/spark">
+Spark website</a>.
 
-<p>Spark is a full-featured instant messaging (IM) client that uses the XMPP protocol.</p>
+<h2>Changelog</h2>
 
-<p><b>Documentation</b><p>
+View the <a href="changelog.html">changelog</a> for a list of changes since the
+last release.
 
-<p>Basic information on Spark can be found in the <a href="install-guide.html">install guide</a> and
-    on the <a href="http://www.jivesoftware.org"> Jive Software website</a>.</p>
+<h2>Support</h2>
 
-<p>If you need additional help using or installing Spark,
-    please visit the <a href="http://www.jivesoftware.org/community/kbcategory.jspa?categoryID=23">
-    online support forums</a>.  Commercial support (email and phone) from
-    <a href="mailto:support@jivesoftware.com">Jive Software Support</a> is also available.
+Free support is provided by the Spark community in the
+<a href="http://www.jivesoftware.org/forums">online forums</a>. Commercial
+support (email and phone) from Jive Software is
+<a href="http://www.jivesoftware.com/products/spark">also available</a>.
 
-<p><b>Changelog</b><p>
+<h2>License Agreements</h2>
 
-View the <a href="changelog.html">changelog</a> for a list of changes since the last release.
+The Spark source code is governed by the Lesser GNU Public License (LGPL), which
+can be found in the <a href="LICENSE.html">LICENSE.html</a> file in this distribution.
+Spark also contains Open Source software from third-parties.
+Licensing terms for those components is specifically noted in the relevant source
+files.<p>
 
-<p><b>License Agreements</b><p>
+Spark contains icons and images licensed from INCORS GmbH. All other
+images are owned by Jive Software. All icons and images in Spark
+are provided under the following license agreement:
 
-<p>By using this software, you agree to the terms of the included <a href="LICENSE.html">license agreement</a>.
-</p>
 
+<pre>
+License Agreement
+
+This is a legal agreement between You, the User of the Spark application
+("The Software"), and Jive Software ("Jive Software"). By downloading the Software,
+you agree to be bound by the terms of this agreement.
+
+All ownership and copyright of the images and icons included in the Software
+distribution remain the property of Jive Software and INCORS GmbH. Jive Software
+grants to you a nonexclusive, non-sublicensable right to use the icons royalty-free
+as part of Spark.
+
+You may not lease, license or sub-license the icons, or a subset of the icons,
+or any modified icons to any third party. You may not incorporate them into your
+own software or design products.
+
+All icon files are provided "As is" without warranties of merchantability and
+fitness for a particular purpose. You agree to hold Jive Software harmless for
+any result that may occur during the course of using the licensed icons.
+
+This License Agreement shall be governed and construed in accordance with the
+laws of Oregon. If any provision of this License Agreement is held to be
+unenforceable, this License Agreement will remain in effect with the provision
+omitted.
+</pre>
+
+
+	<div class="footer">
+	Copyright &copy; Jive Software, 2006
+	</div>
+
+
+	</div>
+</div>
 
 </body>
-
 </html>
