More changelog changes.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5281 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -194,51 +194,41 @@ hr {
 
 <h3>Bug Fixes</h3>
 <ul>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-14'>SPARK-14</a>] - Spark should auto connect on disconnect and not uncheck the auto-login feature.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-72'>SPARK-72</a>] - Roster updates not propagated correctly between Communicator and Exodus</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-88'>SPARK-88</a>] - Updater should check for downloaded version of file in cases where the user does not want to restart.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-14'>SPARK-14</a>] - Spark no longer unchecks the auto-login feature on disconnects.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-88'>SPARK-88</a>] - The update process now checks to see if the update is already downloaded (in case the user never restarted Spark).</li>
     <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-101'>SPARK-101</a>] - The chat window now has proper Mac OS X menus.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-208'>SPARK-208</a>] - Need to Fix VM params for 3D</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-218'>SPARK-218</a>] - Non-English characters not displayed in VCard with Spark</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-221'>SPARK-221</a>] - Sparkplugs not stick on restart on the Mac</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-238'>SPARK-238</a>] - Setting download directory in Spark is persisted on logout.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-240'>SPARK-240</a>] - Some commands should not be offered for workgroups in roster</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-245'>SPARK-245</a>] - 0 byte files should not crash Spark</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-208'>SPARK-208</a>] - Allow VM params to be set for graphics rendering options.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-218'>SPARK-218</a>] - Non-English characters were noe displayed correctly in vCards.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-221'>SPARK-221</a>] - Sparkplugs were not "sticking" after restart on the Mac.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-238'>SPARK-238</a>] - Setting download directory in Spark is now persisted on logout.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-240'>SPARK-240</a>] - Some commands should not be offered for workgroups in roster.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-245'>SPARK-245</a>] - 0 byte files were crashing Spark.</li>
     <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-253'>SPARK-253</a>] - GroupChatRoomInfo needs to support DBCS.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-279'>SPARK-279</a>] - Special Characters in Away Message Crash Spark </li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-280'>SPARK-280</a>] - Spark not showing avatars created in Google.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-281'>SPARK-281</a>] - Conference button hidden in chat room toolbar</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-282'>SPARK-282</a>] - Broadcast message functionallity should be dictated by the broadcast plugin in spark.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-283'>SPARK-283</a>] - In some cases, Spark does not start due to an exception in Tray handling.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-285'>SPARK-285</a>] - link-2-text filter matches too much URL's or text which looks like an URL</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-288'>SPARK-288</a>] - Spark is ignoring error messages in certain cases.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-293'>SPARK-293</a>] - Cancel of Spark Manager download does not actually close the inputstream.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-279'>SPARK-279</a>] - Special characters in the away message could crash Spark.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-280'>SPARK-280</a>] - Spark was not showing avatars created in Google.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-281'>SPARK-281</a>] - Conference button hidden in chat room toolbar.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-282'>SPARK-282</a>] - Broadcast message functionallity is now dictated by the broadcast plugin in spark.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-283'>SPARK-283</a>] - In some cases, Spark was not starting due to an exception in Tray handling.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-285'>SPARK-285</a>] - The link-2-text filter was not matching all URL's correctly.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-288'>SPARK-288</a>] - Spark was ignoring error messages in certain cases.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-293'>SPARK-293</a>] - Cancel of Spark Manager download does was actually closing the input stream.</li>
     <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-294'>SPARK-294</a>] - Improved logic around avatar handling.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-297'>SPARK-297</a>] - Mac/Linux - conference invites are never received.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-300'>SPARK-300</a>] - Unsubscribe Packet Triggers Unsubscribe Response</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-297'>SPARK-297</a>] - Mac/Linux - conference invites were never received.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-300'>SPARK-300</a>] - Unsubscribe packet was triggering unsubscribe response.</li>
     <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-301'>SPARK-301</a>] - Offline messages were not saved in transcript history.</li>
     <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-303'>SPARK-303</a>] - Fixed memory leak in ChatRoom.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-304'>SPARK-304</a>] - Add Chat History to Chat Room Window</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-305'>SPARK-305</a>] - Add a preference option to specify a download folder.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-306'>SPARK-306</a>] -  : - ) should show a smiley.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-307'>SPARK-307</a>] - Chat History not showing this week.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-308'>SPARK-308</a>] - Reconnected clients throw exception in Chat Room with notification system.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-309'>SPARK-309</a>] - Reconnect Error on contact moves.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-310'>SPARK-310</a>] - Log out confirmation dialog needs UI improvment.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-317'>SPARK-317</a>] - Error when loading user history</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-318'>SPARK-318</a>] - No way to specify cleanly that a Sparkplug will fail when Spark API changes</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-321'>SPARK-321</a>] - Pending Presence subscription from other users are not showing up in Spark.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-322'>SPARK-322</a>] - Error retrieving VCard from dJabberd</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-323'>SPARK-323</a>] - auto-away should change presence priority to 0</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-325'>SPARK-325</a>] - Actions | Start Conversations no longer starts a chat.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-326'>SPARK-326</a>] - Double Clicking on a user search result does not start a chat conversation.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-327'>SPARK-327</a>] - Spark project needs the .iml file checked in for others to run within Intellj</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-328'>SPARK-328</a>] - Spark won't start due to Proxy config NPE.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-329'>SPARK-329</a>] - Room does not scroll all the way to the bottom when new message arrives.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-331'>SPARK-331</a>] - Message of type HEADLINE should popup a toaster.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-336'>SPARK-336</a>] - Broadcast to roster causes multiple broadcast windows.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-337'>SPARK-337</a>] - Launch at startup needs to be re-enabled.</li>
-    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-339'>SPARK-339</a>] - Spark should not set presence status for default options</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-304'>SPARK-304</a>] - Added chat history to the chat room window.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-305'>SPARK-305</a>] - Added a preference option to specify a download folder.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-306'>SPARK-306</a>] - The text ": - )" now shows a smiley.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-317'>SPARK-317</a>] - Fixed error when loading user history.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-318'>SPARK-318</a>] - Added a way to specify cleanly that a Sparkplug will fail when Spark API changes.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-321'>SPARK-321</a>] - Pending Presence subscription from other users were not showing up in Spark.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-322'>SPARK-322</a>] - Fixed error retrieving vCards from dJabberd</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-323'>SPARK-323</a>] - The auto-away feature now changes presence priority to 0.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-326'>SPARK-326</a>] - Double clicking on a user search result was not starting a chat conversation.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-328'>SPARK-328</a>] - Fixed bug where Spark wouldn't start due to bad proxy config.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-331'>SPARK-331</a>] - Message of type HEADLINE can now popup as a toaster.</li>
+    <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-339'>SPARK-339</a>] - Spark now longer sets the presence status for default presence options.</li>
 </ul>
 
 	<div class="footer">
