--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,10 +166,10 @@ hr {
 <table boder=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>@version@</b></td>
+	<td><b>2.0.0</b></td>
 </tr><tr>
 	<td align="right">released:</td>
-	<td><b>@builddate@</b></td>
+	<td><b>Sept. 7, 2006</b></td>
 </tr>
 </table>
 
@@ -198,7 +198,7 @@ support (email and phone) from Jive Software is
 
 <h2>License Agreements</h2>
 
-The Spark source code is governed by the Lesser GNU Public License (LGPL), which
+The Spark source code is governed by the GNU Lesser General Public License (LGPL), which
 can be found in the <a href="LICENSE.html">LICENSE.html</a> file in this distribution.
 Spark also contains Open Source software from third-parties.
 Licensing terms for those components is specifically noted in the relevant source
