Update changelog and readme.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5342 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -160,8 +160,25 @@ hr {
 	</div>
 
 	<div id="pageBody">
+<h2>2.0.1 -- <span style="font-weight: normal;">September 11, 2006</span></h2>
+<h2>New Feature</h2>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-350'>SPARK-350</a>] - ICQ transport is included in current Spark</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-351'>SPARK-351</a>] - Using MAC look and feel for Mac builds.</li>
+</ul>
 
-
+<h2>Bug</h2>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-341'>SPARK-341</a>] - Online installer minimum JRE preference is 1.5</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-342'>SPARK-342</a>] - Spark will not start if the language settings do not match i18n.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-343'>SPARK-343</a>] - Spark handles upgrades with the online tag.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-344'>SPARK-344</a>] - Sounds playing by default</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-345'>SPARK-345</a>] - XMPP URI Mapping registering correctly with the registery.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-346'>SPARK-346</a>] - Search no longer crashes in Spark</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-347'>SPARK-347</a>] - Presence is being sent twice when user is idle.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-348'>SPARK-348</a>] - Gateway plugin should check server on seperate thread.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-352'>SPARK-352</a>] - Message in Plugin Viewer is displaying wrong restart message.</li>
+</ul>
 
 <h2>2.0.0 -- <span style="font-weight: normal;">September 7, 2006</span></h2>
 
