--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -161,23 +161,23 @@ hr {
 
 	<div id="pageBody">
 <h2>2.0.1 -- <span style="font-weight: normal;">September 11, 2006</span></h2>
-<h2>New Feature</h2>
+<h3>New Features</h3>
 <ul>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-350'>SPARK-350</a>] - ICQ transport is included in current Spark</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-351'>SPARK-351</a>] - Using MAC look and feel for Mac builds.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-350'>SPARK-350</a>] - Added icons and registration for ICQ gateways.</li>
 </ul>
 
-<h2>Bug</h2>
+<h3>Bug Fixes</h3>
 <ul>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-341'>SPARK-341</a>] - Online installer minimum JRE preference is 1.5</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-341'>SPARK-341</a>] - Changed online installer to require JRE 1.5.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-342'>SPARK-342</a>] - Spark will not start if the language settings do not match i18n.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-343'>SPARK-343</a>] - Spark handles upgrades with the online tag.</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-344'>SPARK-344</a>] - Sounds playing by default</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-345'>SPARK-345</a>] - XMPP URI Mapping registering correctly with the registery.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-344'>SPARK-344</a>] - Fixed invalid paths with sound preference.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-345'>SPARK-345</a>] - XMPP URI mapping now registers correctly with the registry.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-346'>SPARK-346</a>] - Search no longer crashes in Spark</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-347'>SPARK-347</a>] - Presence is being sent twice when user is idle.</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-348'>SPARK-348</a>] - Gateway plugin should check server on seperate thread.</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-352'>SPARK-352</a>] - Message in Plugin Viewer is displaying wrong restart message.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-347'>SPARK-347</a>] - Fixed multiple presence packets being sent on idle.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-348'>SPARK-348</a>] - Gateway plugin now checks the server on separate thread.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-351'>SPARK-351</a>] - Changed Spark to use default look and feel on OSX.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-352'>SPARK-352</a>] - Display correct message on uninstalls of plugins in the plugin viewer.</li>
 </ul>
 
 <h2>2.0.0 -- <span style="font-weight: normal;">September 7, 2006</span></h2>
