--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -160,6 +160,32 @@ hr {
 	</div>
 
 	<div id="pageBody">
+<h2>2.0.2 -- <span style="font-weight: normal;">September 28, 2006</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-363'>SPARK-363</a>] - Added screen selection capability in screenshot feature within a chat room.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-356'>SPARK-356</a>] - Added German translation to Spark.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-359'>SPARK-359</a>] - Updated Icons and Text in spark to reflect functionallity better.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-370'>SPARK-370</a>] - Added Sound Preference for incoming chat invitations.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-374'>SPARK-374</a>] - Improve message notifications using sounds and toasters.</li>
+</ul>
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-357'>SPARK-357</a>] - Spark Manager now handles the online spark distribution correctly.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-360'>SPARK-360</a>] - Added missing i18n properties.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-361'>SPARK-361</a>] - Fixed case where users were showing up as offline when they are online.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-362'>SPARK-362</a>] - Allow for passwords with leading and trailing spaces.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-365'>SPARK-365</a>] - File transfers proxy no longer fails.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-366'>SPARK-366</a>] - Show login failure when Spark is in the system tray and login fails.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-367'>SPARK-367</a>] - Spark can now run with limited permissions.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-368'>SPARK-368</a>] - Fixed error with Wildcard searchs.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-369'>SPARK-369</a>] - Fix connection issue with Facetime and Akonix.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-371'>SPARK-371</a>] - Added back ctrl+n (now ctrl+f) for user searching within contact list and chat window.</li>
+</ul>
+
+
+
 <h2>2.0.1 -- <span style="font-weight: normal;">September 11, 2006</span></h2>
 <h3>New Features</h3>
 <ul>
