Update startup scripts to handle new classpath.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5541 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -180,7 +180,7 @@ hr {
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-366'>SPARK-366</a>] - Show login failure when Spark is in the system tray and login fails.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-367'>SPARK-367</a>] - Spark can now run with limited permissions.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-368'>SPARK-368</a>] - Fixed error with Wildcard searchs.</li>
-<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-369'>SPARK-369</a>] - Fix connection issue with Facetime and Akonix.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-369'>SPARK-369</a>] - Fixed connection issue with Facetime and Akonix.</li>
 <li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-371'>SPARK-371</a>] - Added back ctrl+n (now ctrl+f) for user searching within contact list and chat window.</li>
 </ul>
 
