Update release docs.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5701 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -160,6 +160,24 @@ hr {
 	</div>
 
 	<div id="pageBody">
+<h2>2.0.3 -- <span style="font-weight: normal;">October 11, 2006</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-364'>SPARK-364</a>] - Added French translation to Spark.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-385'>SPARK-385</a>] - Added Italian translation to Spark.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-386'>SPARK-386</a>] - Added Dutch translation to Spark.</li>
+</ul>
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-379'>SPARK-379</a>] - Fixed exception that occured when services could be loaded from the server.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-383'>SPARK-383</a>] - Gateway information is now based on disco and not the subdomain name.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-387'>SPARK-387</a>] - Fixed disconnect on illegal error packet.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-388'>SPARK-388</a>] - Fixed flaky gateway detection in contact list</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-392'>SPARK-392</a>] - Fixed removal of sames user in multiple rooms.</li>
+</ul>
+
+
+
 <h2>2.0.2 -- <span style="font-weight: normal;">September 28, 2006</span></h2>
 <h3>New Features</h3>
 <ul>
