--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,10 +166,11 @@ hr {
 <table boder=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>2.0.2</b></td>
-</tr><tr>
+	<td><b>2.0.3</b></td>
+</tr>
+    <tr>
 	<td align="right">released:</td>
-	<td><b>Sept. 28, 2006</b></td>
+	<td><b>October 11th, 2006</b></td>
 </tr>
 </table>
 
