--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -160,6 +160,15 @@ hr {
 	</div>
 
 	<div id="pageBody">
+<h2>2.0.4 -- <span style="font-weight: normal;">October 18, 2006</span></h2>
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-394'>SPARK-394</a>] - Fixed user search. </li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-395'>SPARK-395</a>] - Fixed issue with broadcasts.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-396'>SPARK-396</a>] - Auto discovery is now working with SRV lookup.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-397'>SPARK-397</a>] - Fixed some minor issues with group chat rooms.</li>
+</ul>
+
 <h2>2.0.3 -- <span style="font-weight: normal;">October 11, 2006</span></h2>
 <h3>New Features</h3>
 <ul>
