--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -6,145 +6,163 @@
 <style type="text/css">
 /* global font and body settings */
 body {
-	font-size : 100%;
-	background-color : #d3d6d9;
-	padding: 0px;
-	margin: 0px 0px 30px 0px;
+    font-size: 100%;
+    background-color: #d3d6d9;
+    padding: 0px;
+    margin: 0px 0px 30px 0px;
 }
+
 body, td, th {
-	font-family : arial, helvetica, sans-serif;
-	font-size : 10pt;
+    font-family: arial, helvetica, sans-serif;
+    font-size: 10pt;
 }
+
 pre, tt, code {
-	font-family : courier new, monospaced;
-	font-size : 9pt;
+    font-family: courier new, monospaced;
+    font-size: 9pt;
 }
+
 #pageContainer {
-	display: block;
-	position: relative;
-	clear: both;
-	background-color: #fff;
-	border: 1px solid #999;
-	padding: 40px;
-	margin: 30px;
-	-moz-border-radius: 6px;
+    display: block;
+    position: relative;
+    clear: both;
+    background-color: #fff;
+    border: 1px solid #999;
+    padding: 40px;
+    margin: 30px;
+    -moz-border-radius: 6px;
 }
+
 #pageHeader {
-	display: block;
-	position: relative;
-	height: 80px;
-	background-color: #e7eaee;
-	border: 1px solid #cccccc;
-	border-bottom: none;
-	-moz-border-radius: 5px 5px 0px 0px;
-	margin: 10px 0px 0px 0px;
+    display: block;
+    position: relative;
+    height: 80px;
+    background-color: #e7eaee;
+    border: 1px solid #cccccc;
+    border-bottom: none;
+    -moz-border-radius: 5px 5px 0px 0px;
+    margin: 10px 0px 0px 0px;
 }
+
 #pageBody {
-	margin: 0px 18px 0px 20px;
+    margin: 0px 18px 0px 20px;
 }
-
-
 
 /* anchors */
 a:link {
-	color: #11568c;
+    color: #11568c;
 }
+
 a:visited {
-	color: #571c8d;
+    color: #571c8d;
 }
+
 a:hover {
-	color: #7a1d42;
-	text-decoration : underline;
+    color: #7a1d42;
+    text-decoration: underline;
 }
+
 a:active {
-	color: #7a1d42;
+    color: #7a1d42;
 }
-
-
 
 /* page header elements (logo and navigation) */
 .navigation {
-	display: block;
-	position: relative;
-	height: 20px;
-	background-color: #335588;
-	border: 1px solid #cccccc;
-	border-top: none;
-	color: #ffffff;
-	font-size: 11px;
-	line-height: 18px;
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 25px 0px;
-	overflow: hidden;
+    display: block;
+    position: relative;
+    height: 20px;
+    background-color: #335588;
+    border: 1px solid #cccccc;
+    border-top: none;
+    color: #ffffff;
+    font-size: 11px;
+    line-height: 18px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 25px 0px;
+    overflow: hidden;
 }
+
 .navigation a {
-	margin: 0px 20px 0px 20px;
+    margin: 0px 20px 0px 20px;
 }
-.navigation a:link { color: #ffffff; }
-.navigation a:visited { color: #ffffff; }
-.navigation a:hover { color: #ffffff; }
-.navigation a:active { color: #ffffff; }
 
+.navigation a:link {
+    color: #ffffff;
+}
 
+.navigation a:visited {
+    color: #ffffff;
+}
+
+.navigation a:hover {
+    color: #ffffff;
+}
+
+.navigation a:active {
+    color: #ffffff;
+}
 
 /* headings */
 h1 {
-	display: block;
-	position: relative;
-	font-size : 1.7em;
-	font-weight : bold;
-	color: #670e15;
-	padding: 0px;
-	margin: 30px 0px 0px 20px;
+    display: block;
+    position: relative;
+    font-size: 1.7em;
+    font-weight: bold;
+    color: #670e15;
+    padding: 0px;
+    margin: 30px 0px 0px 20px;
 }
+
 h2 {
-	font-size : 1.3em;
-	font-weight : bold;
-	margin: 40px 0px 6px 0px;
-	padding: 0px;
-	color: #335588;
+    font-size: 1.3em;
+    font-weight: bold;
+    margin: 40px 0px 6px 0px;
+    padding: 0px;
+    color: #335588;
 }
+
 h3 {
-	font-size : 1.0em;
-	font-weight : bold;
-	margin: 25px 0px 3px 0px;
-	padding: 0px;
-	color: #334466;
+    font-size: 1.0em;
+    font-weight: bold;
+    margin: 25px 0px 3px 0px;
+    padding: 0px;
+    color: #334466;
 }
-
-
 
 /* general elements */
 p {
-	margin: 0px 0px 15px 0px;
+    margin: 0px 0px 15px 0px;
 }
 
 ul {
-	margin: 5px 0px 15px 35px;
+    margin: 5px 0px 15px 35px;
 }
+
 li {
-	padding-bottom : 4px;
+    padding-bottom: 4px;
 }
+
 tt {
-	font-family : courier new;
-	font-weight : bold;
-	color : #060;
+    font-family: courier new;
+    font-weight: bold;
+    color: #060;
 }
+
 hr {
-	display: block;
-	height: 1px;
-	background-color: #999999;
-	border: none;
-	margin: 40px 0px 20px 0px;
+    display: block;
+    height: 1px;
+    background-color: #999999;
+    border: none;
+    margin: 40px 0px 20px 0px;
 }
 
 .footer {
-	font-size : 8pt;
-	color : #666;
-	text-align : center;
-	margin-top : 2em;
-	padding-top : 0.5em;
-	border-top : 1px #CCC solid;
+    font-size: 8pt;
+    color: #666;
+    text-align: center;
+    margin-top: 2em;
+    padding-top: 0.5em;
+    border-top: 1px #CCC solid;
 }
 </style>
 </head>
@@ -160,6 +178,21 @@ hr {
 	</div>
 
 	<div id="pageBody">
+
+<h2>2.0.5 -- <span style="font-weight: normal;">October 30, 2006</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-358'>SPARK-358</a>] - Added a beta version of the MSI installer.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-402'>SPARK-402</a>] - Added ability to add new contacts through transports.</li>
+</ul>
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-393'>SPARK-393</a>] - Fixed blank tab on MAC OSX when presence changed.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-400'>SPARK-400</a>] - Spark now checks for available real estate on monitor.</li>
+<li>[<a href='http://www.jivesoftware.org/issues/browse/SPARK-403'>SPARK-403</a>] - Fixed private chats in group chat rooms.</li>
+</ul>
+
+
 <h2>2.0.4 -- <span style="font-weight: normal;">October 18, 2006</span></h2>
 <h3>Bug Fixes</h3>
 <ul>
