Adding pin template to help work on Adium themes.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5983 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/themes/template.html
+++ b/src/resources/themes/template.html
@@ -49,8 +49,8 @@
         }
 
         function scrollToBottomIfNeeded() {
-            if (scrollToBottomIsNeeded)
-                document.body.scrollTop = document.body.offsetHeight;
+            if (checkIfScrollToBottomIsNeeded)
+                scrollToBottom();
         }
 
         function setStylesheet(id, url) {
