--- a/src/resources/themes/renkoo2.3/renkoo.AdiumMessageStyle/Contents/Resources/Header.html
+++ b/src/resources/themes/renkoo2.3/renkoo.AdiumMessageStyle/Contents/Resources/Header.html
@@ -1,4 +1,4 @@
-<div id="heading" style="display:none;">
+<div id="heading">
 	<div class="conversationIncomingIcon" id="incomingIconPath"></div>
 	<div class="conversationWith" id="chatName"></div>
 	<div class="conversationTime"><span id="timeOpened"></span></div>
