--- a/src/resources/themes/renkoo2.3/renkoo.AdiumMessageStyle/Contents/Resources/temp.html
+++ b/src/resources/themes/renkoo2.3/renkoo.AdiumMessageStyle/Contents/Resources/temp.html
@@ -341,7 +341,7 @@
 
 </head>
 <body style="==bodyBackground==" id="bodyNode" onload="initEvents()">
-<div id="heading" style="display:none;"><div class="conversationIncomingIcon" id="incomingIconPath"></div><div class="conversationWith" id="chatName"></div><div class="conversationTime"><span id="timeOpened"></span></div></div>
+<div id="heading"><div class="conversationIncomingIcon" id="incomingIconPath"></div><div class="conversationWith" id="chatName"></div><div class="conversationTime"><span id="timeOpened"></span></div></div>
 <div id="Chat">
 </div>
 
