--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -177,8 +177,39 @@ hr {
     <a href="README.html">Readme</a>|<a href="changelog.html"><strong>Changelog</strong></a>|<a href="LICENSE.html">License</a>
 </div>
 
+<h2>2.5.0 Beta 2 -- <span style="font-weight: normal;">February 7th, 2007</span></h2>
+<h2>Bug</h2>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-497'>SPARK-497</a>] - Fixed "Away due to idle" always being on.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-499'>SPARK-499</a>] - Fixed invalid emoticon packs breaking Spark.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-505'>SPARK-505</a>] - Fixed caching of persona vcard.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-508'>SPARK-508</a>] - Creating temporary rooms now escapes room jid.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-513'>SPARK-513</a>] - Fixed inconsistent behavior in tab notifications.</li>
+</ul>
+
+<h2>New Features</h2>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-200'>SPARK-200</a>] - Allow drag and drop out of the chat window after file transfer</li>
+</ul>
+
 <h2>2.5.0 Beta 1 -- <span style="font-weight: normal;">January 31st, 2007</span></h2>
-<h3>No Changes</h3>
+<h2>Bug</h2>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-390'>SPARK-390</a>] - Presence no longer breaks with gateways installed</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-405'>SPARK-405</a>] - Conference bookmarks are now saved on the server and not locally.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-420'>SPARK-420</a>] - Fixed window repainting on tab transition with HTML Viewer.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-424'>SPARK-424</a>] - Auto-reconnect clears contact list on shutdown.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-473'>SPARK-473</a>] - Fixed Group chat presence issue.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-492'>SPARK-492</a>] - Presence priority is now set to 1 by default, not 0.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-506'>SPARK-506</a>] - Resizing of chat frame does not resize the send field properly.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-507'>SPARK-507</a>] - Asterisks plugin is now fully functional.</li>
+</ul>
+
+<h2>New Features</h2>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-235'>SPARK-235</a>] - Emoticon API should be extended to allow for pluggable packs.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-427'>SPARK-427</a>] - Action buttons in roster on user rollover</li>
+</ul>
 
 <div id="pageBody">
 <h2>2.0.8 -- <span style="font-weight: normal;">January 23rd, 2007</span></h2>
