--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -183,15 +183,15 @@ hr {
 
 <h3>New Features</h2>
 <ul>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-200'>SPARK-200</a>] - Allow drag and drop out of the chat window after file transfer</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-200'>SPARK-200</a>] - Drag and drop out of the chat window after file transfer now works.</li>
 </ul>
 
 <h3>Bug Fixes</h2>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-497'>SPARK-497</a>] - Fixed "Away due to idle" always being on.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-499'>SPARK-499</a>] - Fixed invalid emoticon packs breaking Spark.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-505'>SPARK-505</a>] - Fixed caching of persona vcard.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-508'>SPARK-508</a>] - Creating temporary rooms now escapes room jid.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-505'>SPARK-505</a>] - Fixed caching of personal vCards.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-508'>SPARK-508</a>] - Creating temporary rooms now escapes room JID.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-513'>SPARK-513</a>] - Fixed inconsistent behavior in tab notifications.</li>
 </ul>
 
@@ -200,8 +200,8 @@ hr {
 
 <h3>New Features</h2>
 <ul>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-235'>SPARK-235</a>] - Emoticon API should be extended to allow for pluggable packs.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-427'>SPARK-427</a>] - Action buttons in roster on user rollover</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-235'>SPARK-235</a>] - Emoticon packs are now supported.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-427'>SPARK-427</a>] - Added action buttons in roster during user rollover.</li>
 </ul>
 
 <h3>Bug Fixes</h2>
@@ -213,7 +213,7 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-473'>SPARK-473</a>] - Fixed Group chat presence issue.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-492'>SPARK-492</a>] - Presence priority is now set to 1 by default, not 0.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-506'>SPARK-506</a>] - Resizing of chat frame does not resize the send field properly.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-507'>SPARK-507</a>] - Asterisks plugin is now fully functional.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-507'>SPARK-507</a>] - Asterisk plugin is now functional.</li>
 </ul>
 
 <h2>2.0.8 -- <span style="font-weight: normal;">January 23rd, 2007</span></h2>
